# Witty-Pi-5-Firmware

./: .gitignore  CMakeLists.txt  README.md
src/: adc.c  adc.h  bootsel_button.h  button.c  button.h  conf.c  conf.h  dummy_load.c  dummy_load.h  fatfs_disk.c  fatfs_disk.h  file_admin.c  file_admin.h  flash.c  flash.h  gpio.c  gpio.h  hibernate.c  hibernate.h  i2c.c  i2c.h  id_eeprom.c  id_eeprom.h  led.c  led.h  log.c  log.h  main.c  main.h  power.c  power.h  rtc.c  rtc.h  script.c  script.h  ts.c  ts.h  tusb_config.h  usb_descriptors.c  usb_msc_device.c  (+2 more)
